# ChatWorks

./: .gitignore  CODEGRAPH.md  CODE_REVIEW_2026-07-02.md  Cargo.toml  README.md  WINDOWS.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: supply-chain.yml
docs/: VIDEO_API.md
scripts/: check-git-deps.sh  git-deps-pinned.csv
src/: main.jsx  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_settings.rs  conversations.rs  engine.rs  fsutil.rs  lib.rs  main.rs  model_registry.rs  server.rs  test_support.rs  tools.rs
src-tauri/tests/: qwen35_tools_loop.rs  qwen35_tools_server.rs  qwen35_vision_highres.rs  qwen35_vision_server.rs  qwen3vl_tools_image_server.rs  qwen3vl_tools_loop.rs  qwen3vl_tools_server.rs  qwen3vl_vision_server.rs
src/api/: sse.js
src/components/: ChatNavGroup.jsx  MessageActions.jsx  MessageContent.jsx  ToolCallList.jsx  icons.jsx
src/media/: image.js  video.js
src/screens/: ChatScreen.jsx  ModelsScreen.jsx  SettingsScreen.jsx
src/state/: AppContext.jsx  ConversationsContext.jsx  conversations.js
