[package]
name = "chatworks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

# The inference backend is chosen per-platform via the target-specific dependencies below
# (Apple MLX on macOS, cross-platform Candle on Windows/Linux), so a plain `cargo build` /
# `tauri build` needs no extra features. To run the Candle backend on an NVIDIA GPU, build
# candle-llm with its `cuda` feature: add `features = ["cuda"]` to the candle-llm dependency
# below (this requires the CUDA toolkit). macOS uses MLX (Apple Metal) automatically.

[dependencies]
axum = "0.8"
base64 = "0.22"
# Pinned to `branch = "main"` to match the backend deps (mlx-llm + candle-llm both pin core-llm
# `branch = "main"`), so cargo unifies on ONE core-llm source — otherwise a `branch` spec here and a
# `rev` spec there are distinct git sources, yielding two core-llm copies whose link-time provider
# registries don't share (the backend's `candle-llama`/`mlx-llama` registration would be invisible to
# this crate). The committed Cargo.lock pins the resolved commit so a stray `cargo update` can't float
# core-llm to a new HEAD (sc-8116).
# DEV-PIN (sc-8528): COORDINATOR flip back to branch="main" after the core-llm + mlx-llm backout PRs merge.
# Temporarily pinned to the field-removed core-llm backout branch (the KV-quant `LoadSpec.kv_cache_quant`
# + `supports_kv_cache_quant` surface is being removed and isn't on main yet).
core-llm = { git = "https://github.com/SceneWorks/core-llm", branch = "michaeltrefry1818/sc-8528-backout/core-llm-remove-kv-quant" }
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Inference backend — exactly one is compiled per platform.
# macOS (Apple Silicon): the MLX backend. Pinned to `main`, which itself pins core-llm
# `branch = "main"`, so the macOS build unifies on ONE core-llm.
# DEV-PIN (sc-8528): COORDINATOR flip back to branch="main" after the core-llm + mlx-llm backout PRs merge.
# Temporarily pinned to the KV-quant-removed mlx-llm backout branch (not merged to main yet).
[target.'cfg(target_os = "macos")'.dependencies]
mlx-llm = { git = "https://github.com/SceneWorks/mlx-llm", branch = "michaeltrefry1818/sc-8528-backout/mlx-llm-remove-kv-quant" }

# Windows / Linux: the cross-platform Candle backend (CPU by default; CUDA via its `cuda` feature).
# DEV-PIN (sc-8528): COORDINATOR flip back to branch="main" after the core-llm + mlx-llm backout PRs merge.
# Temporarily pinned to the candle-llm backout branch (#45) so it pins the field-removed core-llm
# backout branch too — otherwise candle's `branch="main"` HEAD pins core-llm main, splitting the graph
# into TWO core-llm sources. All three backends must pin the SAME core-llm for the provider registry
# to unify.
[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-llm = { git = "https://github.com/SceneWorks/candle-llm", branch = "michaeltrefry1818/sc-8528-backout/candle-remove-kv-quant-compat" }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
