[package]
name = "chatworks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

# The inference backend is chosen per-platform via the target-specific dependencies below
# (Apple MLX on macOS, cross-platform Candle on Windows/Linux), so a plain `cargo build` /
# `tauri build` needs no extra features. To run the Candle backend on an NVIDIA GPU, build
# candle-llm with its `cuda` feature: add `features = ["cuda"]` to the candle-llm dependency
# below (this requires the CUDA toolkit). macOS uses MLX (Apple Metal) automatically.

[dependencies]
axum = "0.8"
base64 = "0.22"
# Pinned to `branch = "main"` to match the backend deps (mlx-llm + candle-llm both pin core-llm
# `branch = "main"`), so cargo unifies on ONE core-llm source — otherwise a `branch` spec here and a
# `rev` spec there are distinct git sources, yielding two core-llm copies whose link-time provider
# registries don't share (the backend's `candle-llama`/`mlx-llama` registration would be invisible to
# this crate). A unilateral switch to `rev` here was verified to break the build with an ambiguous
# `core-llm` source (F-001, code-review 2026-07-02); moving everyone to `rev` is a cross-repo
# coordination tracked in that finding. The committed Cargo.lock pins the resolved commit (sc-8116),
# and `scripts/check-git-deps.sh` compares it against `scripts/git-deps-pinned.csv` so a lockfile
# refresh can't silently float a core dep — the gate runs in `.github/workflows/supply-chain.yml`.
core-llm = { git = "https://github.com/SceneWorks/core-llm", branch = "main" }
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Inference backend — exactly one is compiled per platform.
# macOS (Apple Silicon): the MLX backend. Pinned to `main`, which itself pins core-llm
# `branch = "main"`, so the macOS build unifies on ONE core-llm.
[target.'cfg(target_os = "macos")'.dependencies]
mlx-llm = { git = "https://github.com/SceneWorks/mlx-llm", branch = "main" }

# Windows / Linux: the cross-platform Candle backend (CPU by default; CUDA via its `cuda` feature).
# Same core-llm unification concern as above: candle-llm pins core-llm `branch = "main"`, so a matching
# spec here is what keeps the graph on ONE core-llm and the provider registry unified.
[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-llm = { git = "https://github.com/SceneWorks/candle-llm", branch = "main" }

# The workspace forbids `unsafe` (workspace `unsafe_code = "forbid"`), but this crate must relax it to
# `allow`: the Tauri framework's generated code (and some of its macro-expanded FFI) emits `unsafe`
# blocks that would otherwise trip the forbid lint at compile time. No hand-written `unsafe` lives in
# `src/`; this override exists solely so the framework's macro output links. Scope it crate-wide rather
# than per-module because the offending code is generated outside our sources (code-review F-006).
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
